<resources>
    <string name="app_name">Resturant App</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="mail_not_entered">Please Enter You Email Address</string>
    <string name="login">Login</string>
    <string name="order_text">Review and confirm the order(s) and start preparing them according to the deadline.</string>
    <string name="help">Help</string>
    <string name="call_customer">Call Customer</string>
    <string name="call_partner">Call Rider</string>
    <string name="sir_imran">Imran Rasheed</string>
    <string name="Print">Print</string>
    <string name="Total">Total</string>
    <string name="subTotalAmount">200.00</string>
    <string name="TotalAmount">20000.00</string>
    <string name="Subtotal">Subtotal</string>
    <string name="OrderNote">Order note:</string>
    <string name="Reject">Reject Order</string>
    <string name="GoToCustomer">Go To Customer</string>
    <string name="Delivered">Delivered</string>
    <string name="ReadyToPickUp">Ready To Pickup</string>
    <string name="Accept">Accept Order</string>
    <string name="BussinessOrderNote">Business Order Note Here</string>
    <string name="DeliveryNoteHere">Delivery Note Here</string>
    <string name="WeAreOpen">We Are Open Till</string>
    <string name="DeliveryNote">Delivery note:</string>
    <string name="FriesChoice">CHOICE OF FRIES</string>
    <string name="FriesSauce">CHOICE OF SAUCE</string>
    <string name="ReadyOrderTitle">Ready orders</string>
    <string name="ReadyOrderContent">Review all your ready-to-dispatch orders and dispatch them according to order type.</string>
    <string name="PrepareYourOrder">Prepare your order</string>
    <string name="OrderHistoryContent">Review all your past orders and track your order reports. Please note that you can also review your order history from web console for in depth reporting.</string>
    <string name="PrepareYourOrderDesc">Review the order details and start preparing your order(s) according to the deadline. Ensure to read business note, and delivery note, if applicable.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_order_history">Your Order History</string>
    <string name="logInBodyParcelData">message</string>
    <string name="searching_for_courier">Searching for courier</string>
    <string name="courier_prepare_time">Prepare By</string>
    <string name="Adress">B-50, Block C, North Nazimabad, Karachi, Pakistan</string>
    <string name="order_amount">Order Amount</string>
    <string name="rs">Rs.</string>
    <string name="order_status">Order Status</string>
    <string name="delay_order">Delay Order</string>
    <string name="cancel_message">Are you sure you would like to cancel the order? This process is
permanent and can not be undone.</string>
    <string name="delay_message">If you need more time to prepare the order, let us know so we can
update the customer.</string>
    <string name="cancel_confirm">Why would you like to cancel the order?</string>
    <string name="cancel_hint">Write your reason(s) for cancellation of the order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="delayBTN">Update estimated pickup time</string>
    <string name="please_enter_your_cancellation_reason">Please Enter Your Cancellation Reason</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="call_support">Call support</string>
    <string name="phajja_siri_paye_184022">Phajja Siri Paye(184022)</string>
    <string name="set_preference_of_theme">Set Preference of theme</string>
    <string name="payment_status">Payment Status</string>
    <string name="switch_to_dark_mode">Switch to dark mode</string>
    <string name="manage_your_incoming_orders">Manage your incoming orders</string>
    <string name="set_the_number_of_receipts_you_would_like_to_automatically_print">Set the number of receipts you would like to automatically print</string>
    <string name="accepted_order_copies">Accepted order copies</string>
    <string name="print_a_test_receipt">Print a test receipt</string>
    <string name="please_select_time">Please Select Time</string>
    <string name="description_item">Item description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="menu_not_avaiable">Menu Not Available</string>
    <string name="no_new_order">Opening Tomorrow 8:00 pm</string>
    <string name="_200_00">200.00</string>
    <string name="daniyal_qamar">Daniyal Qamar</string>
    <string name="_2011">#2011</string>
    <string name="placed_at_2_march_2021_16_24">Placed at 2 March 2021 16:24</string>
    <string name="logo_here">LOGO HERE</string>
    <string name="delivery_notes">Delivery Notes:</string>
    <string name="address">Ferozepur Rd, In Front of Shama Metro Station Ichhra Shershah Colony Lahore, Punjab 54610, Pakistan</string>
    <string name="contact">To contact customer dial:</string>
    <string name="dummynumber">+92 323 3333169</string>
    <string name="test_reciept">THIS IS A TEST RECIEPT</string>
    <string name="how_was_your_overall_experience_with_imran">How was your overall experience with Imran?</string>
    <string name="excellent_rating_what_did_you_enjoy_what_was_wrong_with_your_pickup_experience_what_was_wrong_with_bilal">What did you enjoy?</string>
    <string name="submit">Submit</string>
    <string name="delivery_partner_using_someone_else_account">Delivery partner using someone else account</string>
    <string name="late_dropoff">Late dropoff</string>
    <string name="late_pickup">Late pickup</string>
    <string name="unprofessional_behavior">Unprofessional behavior</string>
    <string name="delivery_bag_unavailable">Delivery bag unavailable</string>
    <string name="didn_t_come_inside">Didnot Come Inside</string>
    <string name="no_processing_orders">No Processing Orders</string>
    <string name="no_ready_orders">No Ready Orders</string>
    <string name="write_your_compliments_concerns_about_the_pickup_experience">Write your compliments/concerns about the pickup experience</string>
    <string name="todo">TODO</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="busy_mode_is_enabled_to_receive_new_orders_turn_off_busy_mode">Busy mode is enabled. To receive new orders turn off busy mode.</string>
    <string name="your_business_is_busy">Your Business is Busy</string>
    <string name="logout">Logout</string>
    <string name="leave_for_a_customer_review">Leave for a customer Review</string>
    <string name="leave_for_a_courier_review">Leave for a courier Review</string>
    <string name="orders">Orders</string>
    <string name="preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="history">History</string>
    <string name="modifier_item_1">Modifier item 1</string>
    <string name="order_details">Order details</string>
    <string name="_0">1</string>
    <string name="no_record_found">No Record Found</string>

</resources>