<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/orders" />
    <item
        android:id="@+id/nav_process"
        android:enabled="true"
        android:icon="@drawable/ic_ellipsis"
        android:title="@string/preparing" />
    <item
        android:id="@+id/nav_ready"
        android:enabled="true"
        android:icon="@drawable/icbasket"
        android:title="@string/ready" />
    <item
        android:id="@+id/nav_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />
</menu>