<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/problem"
            android:icon="@drawable/ic_help"
            android:title="@string/help"
            app:showAsAction="ifRoom"
            />
    </group>

    <group>
        <item
            android:id="@+id/menu_availability"
            android:title="@string/menu"
            app:showAsAction="never"/>
        <item
            android:id="@+id/help"
            android:title="Help"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/call_support"
            android:title="@string/call_support"
            app:showAsAction="never"
            />
    </group>
</menu>