<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UiViews.Activities.Reciept">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:id="@+id/root"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_reciept"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/logo_here"
                android:src="@drawable/ic_fast_food" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:background="@color/reciept_black"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/headerNameCustomer"
                    style="@style/recipetHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/daniyal_qamar" />

                <TextView
                    android:id="@+id/orderIdHeader"
                    style="@style/recipetHeaderStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_2011" />
            </LinearLayout>

            <TextView
                android:id="@+id/orderDatenTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/placed_at_2_march_2021_16_24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/serviceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="Delivery"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/delivery_notes"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/deliveryNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/test_reciept"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_reciept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_order_totals_reciept"
                android:paddingTop="20dp"
                tools:listitem="@layout/total_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="4"
                    android:text="@string/Total"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_total_reciept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:text="200.00"
                    android:gravity="end"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />


            <TextView
                android:id="@+id/paid_unpaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:text="@string/test_reciept"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:text="Customer Details:"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/customerNameBtm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="@string/daniyal_qamar"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/customerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="@string/address"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:text="@string/contact"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/customerMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:text="@string/dummynumber"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/businessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:paddingBottom="30dp"
                android:text="Thank you for ordering from Ginsoy - Hyderi Branch"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_marginEnd="339dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/daniyal_qamar"
            android:src="@drawable/ic_printer"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/white" />

        <ProgressBar
            android:id="@+id/pb_reciept"
            android:layout_height="30dp"
            android:layout_width="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

