<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UiViews.Activities.CancelOrder">

    <include
        android:id="@+id/nav_bar_CO"
        layout="@layout/nav_bar_issues_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_view_RO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nav_bar_CO">

        <FrameLayout
            android:id="@+id/frame_container_RO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TableLayout
                    android:id="@+id/table_layout_cancel_order"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="24dp"
                    android:scrollbars="vertical"
                    android:stretchColumns="0"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:id="@+id/payment_status_layout_RO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/textColor"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="20dp"
                            android:text="@string/cancel_message"
                            android:textAllCaps="false" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/textColor"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:paddingLeft="20dp"
                            android:text="@string/cancel_confirm"
                            android:textAllCaps="false" />
                    </TableRow>
                </TableLayout>

                <EditText
                    android:id="@+id/cancel_msg_ET"
                    style="@style/fieldsBg"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="top"
                    android:hint="@string/cancel_hint"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/table_layout_cancel_order" />

                <TextView
                    android:id="@+id/error_message_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/please_enter_your_cancellation_reason"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cancel_msg_ET" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cancel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonBg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn_CO"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/red"
            android:enabled="false"
            android:text="@string/cancel_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>